Add customer section

--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -74,3 +74,38 @@ body
 
       &.second p
         padding-left: 10px
+
+  section#customer
+    background-color: $divider_color
+
+    header
+      color: $text_color
+      padding: 3*$margin 0
+
+    article
+      background-color: #fff
+      width: 29%
+      display: inline-block
+      margin: 14px
+
+      img
+        display: block
+        border: solid $accent_color 7px
+        border-radius: 150px
+        -webkit-border-radius: 150px
+        -moz-border-radius: 150px
+        margin: 2*$margin auto $margin auto
+
+      h4
+        font-weight: 100
+        letter-spacing: 3px
+        text-transform: uppercase
+
+      h5
+        font-weight: 100
+        font-style: italic
+      p
+        text-align: center
+        letter-spacing: 1px
+        padding: $margin
+        margin-bottom: $margin
