--- a/assets/index.html.haml
+++ b/assets/index.html.haml
@@ -22,3 +22,29 @@
           %p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         %article.second
           %p Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.
+
+    %section#customer
+      .content
+        %header
+          %h2 This is what our customers say
+        %article
+          %img{:src => "images/avatar1.jpg"}/
+          %h4
+            Quincy Davies
+            %h5
+              Lorem ipsum
+          %p Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui.
+        %article
+          %img{:src => "images/avatar2.jpg"}/
+          %h4
+            Hilde Akdemir
+            %h5
+              Lorem ipsum
+          %p Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui.
+        %article
+          %img{:src => "images/avatar3.jpg"}/
+          %h4
+            Neo Tromp
+            %h5
+              Lorem ipsum
+          %p Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui.
