--- a/assets/index.html.haml
+++ b/assets/index.html.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
+    %meta{:content => "initial-scale=1", :name => "viewport"}/
     %link{:href => "http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Droid+Serif", :rel => "stylesheet", :type => "text/css"}/
     %link{:href => "css/styles.css", :rel => "stylesheet", :type => "text/css"}/
     %title CSS Chanllenge
