--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -1,37 +1,30 @@
-$accent_color:          #03a9f4
-$primary_color:         #3f51b5
-$light_primary_color:   #c5cae9
-$text_color:            #ffffff
-$primary_text_color:    #333333
-$secondary_text_color:  #727272
-$divider_color:         #b6b6b6
-$margin: 28px
+@import 'variables'
+@import 'compass'
+@import 'compass/reset'
+@import 'susy'
+@import 'layout'
 
-$font_size_medium:      15px
-$font_size_large:       30px
-$font_size_xlarge:      55px
+@include establish-baseline
 
 *
   margin: 0
   padding: 0
 
 .content
-  max-width: 940px
-  margin: auto
   padding-bottom: 2*$margin
 
 body
   color: $primary_text_color
 
   h1, h2, h3, h4, h5, button
-    font-family: 'Droid Sans', sans-serif
+    font-family: $sans-serif-font-family
     text-align: center
   h1
     font-size: $font_size_xlarge
   h2
     font-size: $font_size_large
   p
-    font-family: 'Droid Serif', serif
+    font-family: $serif-font-family
 
   section#header
     background-color: $primary_color
@@ -57,58 +50,77 @@ body
         margin-top: 2*$margin
         padding: $margin/3 $margin
 
-  section#info
-    header
-      padding: 3*$margin 0 2*$margin 0
+  section#features
+    text-align: center
+    @include rhythm(0,3,3,0)
+    h2
+      @include margin-trailer(2, $font_size_large)
 
-    article
-      display: inline-block
-      text-align: center
-      width: 49%
-
-      &.first
-        float: left
-
-        p
-          padding-right: 10px
-
-      &.second p
-        padding-left: 10px
-
-  section#customer
-    background-color: $divider_color
+  section#testimonials
+    background-color: $testimonials-bg-color
+    @include rhythm(0,3,0,0, $base-font-size)
 
     header
       color: $text_color
-      padding: 3*$margin 0
+      h2
+        @include margin-trailer(3, $font-size-large)
 
-    article
-      background-color: #fff
-      width: 29%
-      display: inline-block
-      margin: 14px
+    article .container
+      background-color: $testimonial-bg-color
+      text-align: center
+      @include rhythm(0,2,2,2, $base-font-size)
 
       img
-        display: block
-        border: solid $accent_color 7px
-        border-radius: 150px
-        -webkit-border-radius: 150px
-        -moz-border-radius: 150px
-        margin: 2*$margin auto $margin auto
+        border: $testimonial-image-border-width solid $testimonial-image-border-color
+        @include border-radius(50%)
+        height: rhythm($lines: 5, $offset: 2*$testimonial-image-border-width)
 
       h4
-        font-weight: 100
-        letter-spacing: 3px
+        font-weight: normal
+        letter-spacing: 2px
+        @include adjust-font-size-to($base-font-size)
+        @include rhythm(1,0,0,0, $base-font-size)
         text-transform: uppercase
 
       h5
-        font-weight: 100
         font-style: italic
+        @include rhythm(0,0,0,1)
+
       p
-        text-align: center
-        letter-spacing: 1px
-        padding: $margin
-        margin-bottom: $margin
+        color: $testimonial-text-color
+
+  section#products
+    background-color: $divider_color
+    @include rhythm(0,3,3,0)
+
+    h2
+      text-align: center
+      @include margin-trailer(1, $base-font-size)
+
+    article
+      text-align: center
+      color: $white
+
+    article .container
+      @include rhythm(1,2,2,0, $base-font-size )
+
+
+    article
+      &:nth-of-type(1)
+        .container
+          background-color: $product-1
+      &:nth-of-type(2)
+        .container
+          background-color: $product-2
+      &:nth-of-type(3)
+        .container
+          background-color: $product-3
+      &:nth-of-type(4)
+        .container
+          background-color: $product-4
+      &:nth-of-type(5)
+        .container
+          background-color: $product-5
 
 @media only screen and (max-width: 768px)
   .content
