feature(second-session): load fonts in css

--- a/assets/sass/_variables.sass
+++ b/assets/sass/_variables.sass
@@ -48,6 +48,7 @@ $product-5: $orange
 
 // Typography
 //
+@import url('http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Droid+Serif:400,700,400italic,700italic')
 $sans-serif-font-family: 'Droid Sans', Verdana, Arial, sans-serif
 $serif-font-family:      'Droid Serif', Times, 'Times New Roman', serif
 
